beginning of default style sheet

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -1,5 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
   <file>style.qss</file>
+  <file>images/close.svg</file>
+  <file>images/undock.svg</file>
 </qresource>
 </RCC>
