--- a/include/ignition/gui/style.qss
+++ b/include/ignition/gui/style.qss
@@ -1,3 +1,52 @@
-QWidget {
-/*  background-color: #f00;*/
+/* Docks */
+
+QDockWidget {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  titlebar-close-icon: url(:/images/close.svg);
+  titlebar-normal-icon: url(:/images/undock.svg);
+  color: #fbfbfb;
+  border: none;
+}
+
+QDockWidget::title {
+  text-align: left;
+  background: #f7b664;
+  padding: 10px;
+}
+
+QDockWidget::close-button, QDockWidget::float-button {
+  subcontrol-position: top right;
+  subcontrol-origin: margin;
+  position: absolute;
+  width: 14px;
+}
+
+QDockWidget::close-button {
+  right: 10px;
+}
+
+QDockWidget::float-button {
+  right: 30px;
+}
+
+QDockWidget::close-button:hover, QDockWidget::float-button:hover {
+  background: #f7b664;
+  border: none;
+}
+
+QMainWindow::separator {
+  width: 5px; /* when vertical */
+  height: 5px; /* when horizontal */
+}
+
+QMainWindow::separator:hover {
+  background: #fbfbfb;
+}
+
+/* Main window */
+
+QMainWindow {
+  background: #ededed;
 }
