--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -3,12 +3,14 @@
   <file>style.qss</file>
   <file>images/branch-end.png</file>
   <file>images/branch-more.png</file>
+  <file>images/clear.svg</file>
   <file>images/close.svg</file>
   <file>images/down_arrow.png</file>
   <file>images/file_upload.svg</file>
   <file>images/graph_line.svg</file>
   <file>images/right_arrow.png</file>
   <file>images/search.svg</file>
+  <file>images/select_all.svg</file>
   <file>images/settings.svg</file>
   <file>images/undock.svg</file>
   <file>images/vline.png</file>
