--- a/include/ignition/gui/style.qss
+++ b/include/ignition/gui/style.qss
@@ -19,7 +19,7 @@ QDockWidget {
 
 QDockWidget::title {
   text-align: left;
-  background: #f7b664;
+  background: #eb0a1e;
   padding: 10px;
 }
 
@@ -39,7 +39,7 @@ QDockWidget::float-button {
 }
 
 QDockWidget::close-button:hover, QDockWidget::float-button:hover {
-  background: #f7b664;
+  background: #eb0a1e;
   border: none;
 }
 
