indentation and other tweaks

--- a/include/ignition/gui/style.qss
+++ b/include/ignition/gui/style.qss
@@ -132,6 +132,12 @@ QPushButton:checked
   selection-color: transparent;
 }
 
+QPushButton:focus
+{
+  border: none;
+  outline: none;
+}
+
 /* ---------------------------- */
 /*             Menu             */
 /* ---------------------------- */
