--- a/include/ignition/gui/style.qss
+++ b/include/ignition/gui/style.qss
@@ -323,17 +323,32 @@ QHeaderView::section
 /* QTableView::item styled by delegate */
 
 /* ---------------------------- */
-/*   QFrame#variablePillFrame   */
+/*          VariablePill        */
 /* ---------------------------- */
 
-QFrame#variablePillFrame[selectedPill=false]
+#variablePillFrame
 {
-  border-radius: 4px;
+  border-radius: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin: 0px;
   background-color: #2196f3;
+}
+
+#variablePillFrame > QLabel
+{
+  color: #ffffff;
+}
+
+QFrame[selectedPill=false]
+{
+  border: 1.5px solid #2196f3;
 }
 
 QFrame[selectedPill=true]
 {
-  background-color: #ff0000;
+  border: 1.5px solid #1565c0;
 }
 
