--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -8,6 +8,7 @@
   <file>images/graph_line.svg</file>
   <file>images/right_arrow.png</file>
   <file>images/search.svg</file>
+  <file>images/settings.png</file>
   <file>images/settings.svg</file>
   <file>images/undock.svg</file>
   <file>images/vline.png</file>
