--- a/include/ignition/gui/style.qss
+++ b/include/ignition/gui/style.qss
@@ -113,26 +113,28 @@ QTextEdit
 QPushButton,
 QToolButton
 {
-  border-radius: 0px;
   border: 0px;
   margin: 8px;
   selection-color: transparent;
-  background-color: rgba(153, 153, 153, 20%);
 }
 
 QPushButton
 {
+  border-radius: 0px;
   color: #393939;
   font-weight: 300;
   text-align: center;
   padding: 8px;
   min-width: 80px;
+  background-color: rgba(153, 153, 153, 20%);
 }
 
 QToolButton
 {
   min-height: 30px;
   min-width: 30px;
+  background-color: transparent;
+  border-radius: 15px;
 }
 
 QPushButton:hover,
@@ -169,6 +171,11 @@ QToolButton:focus
 {
   border: none;
   outline: none;
+}
+
+QToolButton::menu-indicator
+{
+  image: none;
 }
 
 QPushButton#collapsibleButton
