--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -5,8 +5,10 @@
   <file>qtquickcontrols2.conf</file>
 
   <file>qml/Card.qml</file>
-  <file>qml/Dialog.qml</file>
-  <file>qml/MainWindow.qml</file>
+  <file>qml/Main.qml</file>
+  <file>qml/PluginMenu.qml</file>
+  <file>qml/SideDrawer.qml</file>
+  <file>qml/StandaloneDialog.qml</file>
 
   <file>qml/images/menu.png</file>
   <file>qml/images/drawer.png</file>
