spinbox style, context menu example

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -5,6 +5,7 @@
   <file>qtquickcontrols2.conf</file>
 
   <file>qml/Card.qml</file>
+  <file>qml/IgnSpinBox.qml</file>
   <file>qml/Main.qml</file>
   <file>qml/PluginMenu.qml</file>
   <file>qml/SideDrawer.qml</file>
